tests/typechecking/valid/let sub IntInt.ml
let x = 1 - 2 in y = 3 + 4 in print_int (x-y)
