tests/typechecking/invalid/var-undefined.ml
let x = y = 1 in print_int x 
